--- a/22120409.md
+++ b/22120409.md
@@ -36,10 +36,29 @@
 
 ## Task 3: Log Review
 - You received a system log file at /var/log/syslog.
-- Display the last 10 lines and the first 5 lines of the file.
-    - Dùng lệnh `tail -10 /var/log/syslog` và `head -5 /var/log/syslog`
-    - Lệnh `tail -10 /var/log/syslog` hiển thị 10 dòng cuối cùng của file được chỉ định, trong khi lệnh `head -5 /var/log/syslog` hiển thị 5 dòng đầu tiên của file.
+- Display the last 10 lines.
+    - Dùng lệnh `tail -10 /var/log/syslog`
+    - Lệnh `tail -10 /var/log/syslog` hiển thị 10 dòng cuối cùng của file được chỉ định.
+    - Kết quả: ![alt text](image-2.png)
+- Display the first 5 lines of the file
+    - Dùng lệnh `head -5 /var/log/syslog`
+    - Lệnh `head -5 /var/log/syslog` hiển thị 5 dòng đầu tiên của file.
+    - Kết quả: ![alt text](image-3.png)
 - Reverse the content of the file for a quick scan.
     - Dùng lệnh `tac /var/log/syslog`
     - Lệnh `tac` đảo ngược thứ tự các dòng trong file, hiển thị dòng cuối trước.
-- Kết quả:
+    - Kết quả: (Em thêm | head -5 do output của tac quá dài)![alt text](image-4.png)
+
+## Task 4: Pattern Search
+- Search for all lines that contain the word error (case-insensitive).
+    - Dùng lệnh `grep -i "error" /var/log/syslog`
+    - Lệnh `grep -i "error" /var/log/syslog` tìm kiếm tất cả các dòng trong file chứa từ "error", không phân biệt chữ hoa hay chữ thường.
+    - Kết quả: ![alt text](image-5.png)
+- Save only these lines to a file called errors.log.
+    - Dùng lệnh `grep -i "error" /var/log/syslog > errors.log`
+    - Lệnh `>` chuyển hướng đầu ra của lệnh grep vào tệp "errors.log", lưu các dòng tìm được vào tệp này.
+    - Kết quả: ![alt text](image-6.png)
+- Count how many such lines exist.​
+    - Dùng lệnh `grep -i "error" /var/log/syslog | wc -l`
+    - Lệnh `wc -l` đếm số dòng đầu vào, trong trường hợp này là số dòng chứa từ "error".
+    - Kết quả: ![alt text](image-7.png)
