--- a/22120409.md
+++ b/22120409.md
@@ -62,3 +62,17 @@
     - Dùng lệnh `grep -i "error" /var/log/syslog | wc -l`
     - Lệnh `wc -l` đếm số dòng đầu vào, trong trường hợp này là số dòng chứa từ "error".
     - Kết quả: ![alt text](image-7.png)
+
+## Task 5: Stream Redirection
+- Redirect the list of all files in /etc into a file named etc_list.txt without showing it on screen.
+    - Dùng lệnh `ls /etc > etc_list.txt`
+    - Dấu `>` chuyển hướng đầu ra của ls /etc vào etc_list.txt mà không hiển thị trên màn hình.
+    - Kết quả: ![alt text](image-9.png)
+- Append the list of files from /bin to the same file.​
+    - Dùng lệnh `ls /bin >> etc_list.txt`
+    - Dấu `>>` thêm đầu ra của ls /bin vào cuối tệp etc_list.txt mà không ghi đè nội dung hiện có.
+    - Kết quả: ![alt text](image-10.png)
+- View the result one page at a time.
+    - Dùng lệnh `less etc_list.txt`
+    - Lệnh `less` cho phép xem nội dung tệp từng trang 1
+    - Kết quả: ![alt text](image-11.png)
