--- a/22120409.md
+++ b/22120409.md
@@ -21,12 +21,11 @@
     - Lệnh `mkdir` được sử dụng để tạo một thư mục mới có tên là "project_logs" trong thư mục hiện tại.
 - Inside it, create subfolders old_backup, archive, and current. Then, create a file temp.txt
     - Dùng lệnh: 
-
-        `cd project_logs`
-
-        `mkdir old_backup archive current`
-
-        `touch temp.txt`
+        ```bash
+        cd project_logs
+        mkdir old_backup archive current
+        touch temp.txt
+        ```
     - Lệnh `cd project_logs` chuyển vào thư mục "project_logs" vừa tạo. Lệnh `mkdir old_backup archive current` tạo ba thư mục con bên trong "project_logs". Lệnh `touch temp.txt` tạo một tệp trống có tên "temp.txt" trong thư mục hiện tại.
 - Verify that they exist.
     - Dùng lệnh `ls -l`
@@ -76,3 +75,84 @@
     - Dùng lệnh `less etc_list.txt`
     - Lệnh `less` cho phép xem nội dung tệp từng trang 1
     - Kết quả: ![alt text](image-11.png)
+
+## Task 6: Text Processing
+- Create a file users.txt with the following content:​  
+    Alice:Admin  
+    Bob:User  
+    Carol:Guest
+    - Dùng lệnh `echo -e "Alice:Admin\nBob:User\nCarol:Guest" > users.txt`
+    - Lệnh trên sử dụng echo với tùy chọn -e để nhận ký tự đặc biệt \n và chuyển hướng đầu ra vào file users.txt.
+- Use cut or awk to extract just the usernames.​
+    - Dùng lệnh `cut -d':' -f1 users.txt`
+    - Lệnh `cut -d':' -f1 users.txt` sử dụng dấu hai chấm làm dấu phân cách và lấy trường đầu tiên (tên người dùng) từ mỗi dòng trong tệp users.txt.
+- Use tr to convert them to lowercase.
+    - Dùng lệnh `cut -d':' -f1 users.txt | tr 'A-Z' 'a-z'`
+    - Lệnh `tr 'A-Z' 'a-z'` chuyển đổi tất cả các chữ cái in hoa thành chữ thường trong đầu ra của lệnh cut.
+- Use sort to display them in reverse alphabetical order.
+    - Dùng lệnh `cut -d':' -f1 users.txt | sort -r`
+    - Lệnh `sort -r` sắp xếp đầu ra theo thứ tự ngược thứ tự bảng chữ cái.
+- Kết quả:
+
+## Task 7: Cleanup Script
+- Remove an empty directory named old_backup​
+    - Dùng lệnh `rmdir old_backup`
+    - Lệnh `rmdir old_backup` xóa thư mục trống có tên "old_backup".
+- Delete a file named temp.txt​
+    - Dùng lệnh `rm temp.txt`
+    - Lệnh `rm temp.txt` xóa tệp có tên "temp.txt".
+- Move a file report.txt to the archive folder​
+    - Dùng lệnh `mv report.txt archive/`
+    - Lệnh `mv report.txt archive/` di chuyển tệp "report.txt" vào thư mục "archive".
+-​ Copy archive/report.txt to current/report_backup.txt​
+    - Dùng lệnh `cp archive/report.txt current/report_backup.txt`
+    - Lệnh `cp archive/report.txt current/report_backup.txt` sao chép tệp "report.txt" từ thư mục "archive" sang thư mục "current" với tên mới "report_backup.txt".
+- Kết quả: 
+
+## Task 8: File Hunting
+- Find all .conf files under /etc​
+    - Dùng lệnh `find /etc -name "*.conf" -type f`
+    - Lệnh `find /etc -name "*.conf" -type f` tìm tất cả các tệp có phần mở rộng .conf trong thư mục /etc và các thư mục con của nó.
+    - Kết quả:
+- Find all files with 755 permission in your home directory​
+    - Dùng lệnh `find ~ -perm 755 -type f`
+    - Lệnh `find ~ -perm 755 -type f` tìm tất cả các tệp trong thư mục home của người dùng có quyền truy cập 755.
+    - Kết quả:
+-​ Find all directories under /usr that contain the word lib​
+    - Dùng lệnh `find /usr -name "*lib*" -type d`
+    - Lệnh `find /usr -name "*lib*" -type d` tìm tất cả các thư mục trong /usr có tên chứa từ "lib".
+    - Kết quả:
+
+## Task 9: Joining Data
+- Create two files:  
+    names.txt:​  
+    1 Alice  
+    2 Bob  
+    3 Carol  
+    roles.txt:  
+    1 Admin  
+    2 User  
+    3 Guest
+    - ```bash
+      echo -e "1 Alice\n2 Bob\n3 Carol" > names.txt
+      echo -e "1 Admin\n2 User\n3 Guest" > roles.txt
+      ```
+    - 2 lệnh trên đưa nội dung vào 2 file names.txt và roles.txt bằng echo với tùy chọn -e để nhận ký tự đặc biệt \n và chuyển hướng đầu ra vào các file tương ứng.
+    - Kết quả:
+- Join them into one file with both name and role.
+    - Dùng lệnh `join names.txt roles.txt > user_roles.txt`
+    - Lệnh `join names.txt roles.txt` kết hợp hai tệp dựa trên cột chung (cột đầu tiên trong cả hai tệp) và lưu kết quả vào tệp "user_roles.txt".
+    - Kết quả:
+
+## Task 10: Line Numbering & Word Counts
+- Use nl to number the lines of users.txt
+    - Dùng lệnh `nl users.txt`
+    - Lệnh `nl users.txt` đánh số các dòng trong tệp users.txt và hiển thị chúng.
+- Use wc to count:​ Number of lines​, Number of words​, Number of bytes in users.txt​
+    - ```bash
+      wc -l users.txt  # Đếm số dòng
+      wc -w users.txt  # Đếm số từ
+      wc -c users.txt  # Đếm số byte
+      ```
+    - Lệnh `wc -l users.txt` đếm số dòng trong tệp users.txt. Lệnh `wc -w users.txt` đếm số từ trong tệp. Lệnh `wc -c users.txt` đếm số byte trong tệp.
+- Kết quả:
