--- a/22120409.md
+++ b/22120409.md
@@ -281,11 +281,28 @@ report_backup.txt
       echo -e "1 Admin\n2 User\n3 Guest" > roles.txt
       ```
     - 2 lệnh trên đưa nội dung vào 2 file names.txt và roles.txt bằng echo với tùy chọn -e để nhận ký tự đặc biệt \n và chuyển hướng đầu ra vào các file tương ứng.
-    - Kết quả:
+    - Kết quả:  
+  ~/Documents ❯ echo -e "1 Alice\n2 Bob\n3 Carol" > names.txt  
+      echo -e "1 Admin\n2 User\n3 Guest" > roles.txt  
+  ~/Documents ❯ cat names.txt                                    
+1 Alice  
+2 Bob  
+3 Carol    
+  ~/Documents ❯ cat roles.txt                                  
+1 Admin  
+2 User  
+3 Guest
+
 - Join them into one file with both name and role.
     - Dùng lệnh `join names.txt roles.txt > user_roles.txt`
     - Lệnh `join names.txt roles.txt` kết hợp hai tệp dựa trên cột chung (cột đầu tiên trong cả hai tệp) và lưu kết quả vào tệp "user_roles.txt".
-    - Kết quả:
+    - Kết quả:  
+  ~/Documents ❯ join names.txt roles.txt > user_roles.txt   
+  ~/Documents ❯ cat user_roles.txt                          
+1 Alice Admin  
+2 Bob User  
+3 Carol Guest
+
 
 ## Task 10: Line Numbering & Word Counts
 - Use nl to number the lines of users.txt
@@ -298,4 +315,14 @@ report_backup.txt
       wc -c users.txt  # Đếm số byte
       ```
     - Lệnh `wc -l users.txt` đếm số dòng trong tệp users.txt. Lệnh `wc -w users.txt` đếm số từ trong tệp. Lệnh `wc -c users.txt` đếm số byte trong tệp.
-- Kết quả:
+- Kết quả:  
+  ~/Documents ❯ nl users.txt                                       
+     1	Alice:Admin  
+     2	Bob:User  
+     3	Carol:Guest  
+  ~/Documents ❯ wc -l users.txt                                    
+3 users.txt  
+  ~/Documents ❯ wc -w users.txt                                    
+3 users.txt  
+  ~/Documents ❯ wc -c users.txt                                    
+33 users.txt
