--- a/22120409.md
+++ b/22120409.md
@@ -248,15 +248,41 @@ report_backup.txt
 - Find all .conf files under /etc​
     - Dùng lệnh `find /etc -name "*.conf" -type f`
     - Lệnh `find /etc -name "*.conf" -type f` tìm tất cả các tệp có phần mở rộng .conf trong thư mục /etc và các thư mục con của nó.
-    - Kết quả:
+    - Kết quả:  
+  ~ ❯ find /etc -name "*.conf" -type f               
+/etc/locale.conf  
+/etc/PackageKit/Vendor.conf  
+/etc/PackageKit/PackageKit.conf  
+/etc/openal/alsoft.conf  
+/etc/geoclue/geoclue.conf  
+/etc/e2scrub.conf  
+/etc/xdg/user-dirs.conf  
+/etc/ca-certificates.conf  
+/etc/apg.conf  
+/etc/fonts/fonts.conf  
+
 - Find all files with 755 permission in your home directory​
     - Dùng lệnh `find ~ -perm 755 -type f`
     - Lệnh `find ~ -perm 755 -type f` tìm tất cả các tệp trong thư mục home của người dùng có quyền truy cập 755.
-    - Kết quả:
--​ Find all directories under /usr that contain the word lib​
-    - Dùng lệnh `find /usr -name "*lib*" -type d`
-    - Lệnh `find /usr -name "*lib*" -type d` tìm tất cả các thư mục trong /usr có tên chứa từ "lib".
-    - Kết quả:
+    - Kết quả:  
+  ~ ❯ find ~ -perm 755 -type f                             
+/home/c0smic/.cache/gitstatus/gitstatusd-linux-x86_64  
+/home/c0smic/.m2/wrapper/dists/apache-maven-3.9.9-bin/4nf9hui3q3djbarqar9g711ggc/apache-maven-3.9.9/bin/mvn  
+/home/c0smic/.config/BraveSoftware/Brave-Browser/biahpgbdmdkfgndcmfiipgcebobojjkp/1.0.36/tor-0.4.8.10-linux-brave-2   
+/home/c0smic/.config/Code/User/History/-5c25d304/ae1X.sh  
+/home/c0smic/.config/Code/User/History/-5c25d304/XZFG.sh  
+/home/c0smic/.config/Code/User/History/-5c25d304/1GGz.sh  
+
+-​ Find all directories under /usr that contain the word lib​  
+    - Dùng lệnh `find /usr -name "*lib*" -type d`  
+    - Lệnh `find /usr -name "*lib*" -type d` tìm tất cả các thư mục trong /usr có tên chứa từ "lib".  
+    - Kết quả:  
+  ~ ❯ find /usr -name "*lib*" -type d           
+/usr/lib64  
+/usr/local/lib  
+/usr/local/lib/node_modules/@anthropic-ai/claude-code/node_modules/@img/sharp-linux-x64/lib  
+/usr/local/lib/node_modules/@anthropic-ai/claude-code/node_modules/@img/sharp-libvips-linux-x64  
+/usr/local/lib/node_modules/@anthropic-ai/claude-code/node_modules/@img/sharp-libvips-linux-x64/lib  
 
 ## Task 9: Joining Data
 - Create two files:  
