--- a/22120409.md
+++ b/22120409.md
@@ -61,7 +61,7 @@
 reports.
     - Dùng lệnh:
         ```bash
-        sudo usermod -aG beta_test dev_lead
+        sudo usermod -aG alpha_dev,beta_test dev_lead
         ```
     - Giải thích: Lệnh này thêm dev_lead vào nhóm beta_test, cho phép họ truy cập cả tài nguyên development và testing.
 - Checkpoint Question: After adding dev_lead to both groups, use a command to list their group memberships. What do you observe?
@@ -145,3 +145,80 @@ reports.
         ls -l
         ```
     - Giải thích: Lệnh `su - dev_junior` chuyển sang người dùng dev_junior, `cd` di chuyển vào thư mục, `touch` tạo tệp mới, và `ls -l` liệt kê nội dung thư mục với chi tiết.
+
+- Log in as guest_user and try to: Navigate into /projects/alpha
+    - Dùng lệnh:
+        ```bash
+        su - guest_user
+        cd /projects/alpha
+        ```
+    - Giải thích: Lệnh `su - guest_user` chuyển sang người dùng guest_user và `cd` cố gắng di chuyển vào thư mục.
+
+- Checkpoint Question: Why is dev_junior able to write to the directory? Why is
+guest_user blocked?
+    - Trả lời: 
+        - dev_junior có thể ghi vào thư mục /projects/alpha vì nó là thành viên của nhóm alpha_dev, và nhóm này có quyền ghi (write) trên thư mục đó (quyền nhóm là 7).
+        - guest_user bị chặn truy cập vào thư mục /projects/alpha vì nó không thuộc nhóm alpha_dev và quyền của người khác (others) trên thư mục này là 0, nghĩa là không có quyền truy cập nào cả.
+
+## Step 6: Test Access to Beta Reports Directory
+- Log in as tester_junior and attempt to: Navigate to /projects/beta_reports, Create a new file
+    - Dùng lệnh:
+        ```bash
+        su - tester_junior
+        cd /projects/beta_reports
+        touch test_report.txt
+        ```
+    - Giải thích: Lệnh `su - tester_junior` chuyển sang người dùng tester_junior, `cd` di chuyển vào thư mục, và `touch` cố gắng tạo tệp mới.
+
+- As root, create a file called sample_report.txt inside the Beta directory with
+sample text.
+    - Dùng lệnh:
+        ```bash
+        sudo bash -c 'echo "Sample report." > /projects/beta_reports/sample_report.txt'
+        ```
+    - Giải thích: Lệnh này sử dụng `sudo` để chạy một lệnh bash với quyền root, tạo tệp sample_report.txt và ghi nội dung vào đó.
+
+- Log in as dev_lead and try to: Read the contents of sample_report.txt, Delete sample_report.txt
+    - Dùng lệnh:
+        ```bash
+        su - dev_lead
+        cat /projects/beta_reports/sample_report.txt
+        rm /projects/beta_reports/sample_report.txt
+        ```
+    - Giải thích: Lệnh `su - dev_lead` chuyển sang người dùng dev_lead, `cat` đọc nội dung tệp, và `rm` cố gắng xóa tệp.
+
+- Checkpoint Questions:
+●​ Was tester_junior able to write to the directory? Why or why not?
+●​ Could dev_lead read or delete the file? Explain based on group memberships and
+permission settings.
+    - Trả lời:
+        - tester_junior không thể ghi vào thư mục /projects/beta_reports vì nó là thành viên của nhóm beta_test, và nhóm này chỉ có quyền đọc và thực thi (5) trên thư mục đó, không có quyền ghi (write).
+        - dev_lead có thể đọc nội dung của sample_report.txt vì nó là thành viên của nhóm beta_test, và nhóm này có quyền đọc (read) trên thư mục. Tuy nhiên, dev_lead không thể xóa tệp sample_report.txt vì nó không có quyền ghi (write) trên thư mục /projects/beta_reports, do đó không thể xóa tệp trong thư mục này.
+
+## Final Reflection
+- What do directory execute (x) permissions allow users to do?
+    - Trả lời: Quyền thực thi (execute - x) trên thư mục cho phép người dùng truy cập vào nội dung bên trong thư mục đó. Cụ thể, nếu một người dùng có quyền thực thi trên một thư mục, họ có thể:
+        - Di chuyển vào thư mục đó bằng lệnh `cd`.
+        - Truy cập các tệp và thư mục con bên trong thư mục đó (nếu có quyền đọc trên các tệp/thư mục con).
+        - Thực thi các tệp thực thi bên trong thư mục đó.
+
+- What are the consequences of setting group permissions without also configuring the correct group ownership?
+    - Trả lời: Nếu chỉ thiết lập quyền nhóm mà không cấu hình đúng quyền sở hữu nhóm, có thể dẫn đến các vấn đề:
+        - Nếu một người dùng không thuộc nhóm sở hữu của thư mục hoặc tệp, họ sẽ không thể tận dụng các quyền nhóm đã thiết lập, dẫn đến việc không thể truy cập hoặc thao tác với tài nguyên đó.
+        - Hệ thống quản lý quyền dựa trên nhóm sẽ không hoạt động đúng.
+
+- What command would you use to safely assign a user to multiple groups without
+removing existing memberships?
+    - Trả lời: Để thêm một người dùng vào nhiều nhóm mà không xóa các thành viên hiện có, sử dụng lệnh:
+        ```bash
+        sudo usermod -aG <group1>,<group2> <username>
+        ```
+      Trong đó, `-aG` là tùy chọn để thêm người dùng vào các nhóm bổ sung mà không xóa họ khỏi các nhóm hiện có.
+
+## Extension Challenge (Optional)
+- Modify the Alpha directory so that team members can write files but cannot delete each other’s files.
+    - Dùng lệnh:
+        ```bash
+        sudo chmod 1770 /projects/alpha
+        ```
+    - Giải thích: Số 1 ở đầu (sticky bit) đảm bảo rằng chỉ chủ sở hữu của tệp, chủ sở hữu file hoặc người dùng root mới có thể xóa hoặc đổi tên các tệp trong thư mục, cho dù các thành viên khác của nhóm có quyền ghi.
