--- a/HW02/22120409.md
+++ b/HW02/22120409.md
@@ -10,6 +10,7 @@
         sudo groupadd beta_test
         ```
     - Giải thích: Lệnh `groupadd` tạo nhóm mới trong hệ thống.
+    - Kết quả:
 - Create the following user accounts.
     - Dùng lệnh:
         ```bash
@@ -22,6 +23,7 @@
         sudo useradd -m -s /bin/bash guest_user
         ```
     - Giải thích: Lệnh `useradd` tạo người dùng mới với tùy chọn `-m` để tạo thư mục home và `-s` để chỉ định shell.
+    - Kết quả:
 - Set a temporary password for each user (e.g., password123 for lab use only).
     - Dùng lệnh:
         ```bash
@@ -32,6 +34,7 @@
         echo "guest_user:password123" | sudo chpasswd
         ```
     - Giải thích: Lệnh `chpasswd` thay đổi mật khẩu của người dùng.
+    - Kết quả:
 - Confirm that the new users and groups have been correctly added by inspecting the relevant system files.
     - Dùng lệnh:
         ```bash
@@ -39,8 +42,9 @@
         cat /etc/passwd | grep -E "dev_lead|dev_junior|tester_lead|tester_junior|guest_user"
         ```
     - Giải thích: file `/etc/group` chứa thông tin về các nhóm, file `/etc/passwd` chứa thông tin về người dùng, lệnh `grep -E` tìm kiếm các dòng chứa tên nhóm hoặc người dùng.
+    - Kết quả:
 - Checkpoint Question: What group is assigned to new users by default if no group is specified?
-    - Trả lời: Mặc định thì người dùng mới được gán vào một nhóm có cùng tên với tên người dùng. Ví  dụ người dùng `dev_lead` sẽ được gán vào nhóm `dev_lead` nếu không chỉ định nhóm khác.
+    - Trả lời: Mặc định thì người dùng mới được gán vào một nhóm có cùng tên với tên người dùng. Ví dụ người dùng `dev_lead` sẽ được gán vào nhóm `dev_lead` nếu không chỉ định nhóm khác.
 
 ## Step 2: Assign Users to Groups
 - Add dev_lead and dev_junior to the development team group.
@@ -50,6 +54,7 @@
         sudo usermod -aG alpha_dev dev_junior
         ```
     - Giải thích: Lệnh `usermod -aG` thêm người dùng vào nhóm mà không xóa họ khỏi các nhóm hiện có.
+    - Kết quả:
 - Add tester_lead and tester_junior to the testing team group.
     - Dùng lệnh:
         ```bash
@@ -57,6 +62,7 @@
         sudo usermod -aG beta_test tester_junior
         ```
     - Giải thích: Tương tự như trên, thêm người dùng vào nhóm mà không xóa họ khỏi các nhóm hiện có.
+    - Kết quả:
 - Assign dev_lead to both groups (developer and tester) so they can read testing
 reports.
     - Dùng lệnh:
@@ -64,6 +70,7 @@ reports.
         sudo usermod -aG alpha_dev,beta_test dev_lead
         ```
     - Giải thích: Lệnh này thêm dev_lead vào nhóm beta_test, cho phép họ truy cập cả tài nguyên development và testing.
+    - Kết quả:
 - Checkpoint Question: After adding dev_lead to both groups, use a command to list their group memberships. What do you observe?
     - Dùng lệnh:
         ```bash
@@ -73,7 +80,8 @@ reports.
         - Nhóm chính (primary group): dev_lead
         - Nhóm bổ sung: alpha_dev và beta_test
 
-        Điều này cho phép dev_lead có quyền truy cập vào cả tài nguyên của nhóm phát triển và nhóm kiểm thử.
+        Điều này nghĩa là dev_lead có quyền truy cập vào cả tài nguyên của nhóm phát triển và nhóm kiểm thử.
+    - Kết quả:
 
 ## Step 3: Set Up Project Directories
 - Create a parent directory called /projects, if it doesn’t exist.
@@ -106,6 +114,8 @@ reports.
         ```
     - Giải thích: Lệnh `ls -ld` hiển thị thông tin chi tiết về các thư mục, bao gồm quyền sở hữu nhóm.
 
+- Kết quả:
+
 - Checkpoint Question: What is the default owner and group of a directory created by the root user?
     - Trả lời: Mặc định, khi thư mục được tạo bởi người dùng root, chủ sở hữu và nhóm của thư mục đó là root.
     
@@ -123,6 +133,8 @@ reports.
         sudo chmod 750 /projects/beta_reports
         ```
     - Giải thích: Lệnh `chmod 750` thiết lập quyền truy cập cho chủ sở hữu là đọc, ghi và thực thi (7), nhóm có quyền đọc và thực thi (5), trong khi người khác không có quyền truy cập (0).
+
+- Kết quả: 
 
 - Checkpoint Question: Translate these permission needs into octal notation. What should the three-digit permissions be for each directory?
     - Trả lời: 
@@ -145,6 +157,7 @@ reports.
         ls -l
         ```
     - Giải thích: Lệnh `su - dev_junior` chuyển sang người dùng dev_junior, `cd` di chuyển vào thư mục, `touch` tạo tệp mới, và `ls -l` liệt kê nội dung thư mục với chi tiết.
+    - Kết quả:
 
 - Log in as guest_user and try to: Navigate into /projects/alpha
     - Dùng lệnh:
@@ -153,9 +166,9 @@ reports.
         cd /projects/alpha
         ```
     - Giải thích: Lệnh `su - guest_user` chuyển sang người dùng guest_user và `cd` cố gắng di chuyển vào thư mục.
+    - Kết quả:
 
-- Checkpoint Question: Why is dev_junior able to write to the directory? Why is
-guest_user blocked?
+- Checkpoint Question: Why is dev_junior able to write to the directory? Why is guest_user blocked?
     - Trả lời: 
         - dev_junior có thể ghi vào thư mục /projects/alpha vì nó là thành viên của nhóm alpha_dev, và nhóm này có quyền ghi (write) trên thư mục đó (quyền nhóm là 7).
         - guest_user bị chặn truy cập vào thư mục /projects/alpha vì nó không thuộc nhóm alpha_dev và quyền của người khác (others) trên thư mục này là 0, nghĩa là không có quyền truy cập nào cả.
@@ -222,3 +235,4 @@ removing existing memberships?
         sudo chmod 1770 /projects/alpha
         ```
     - Giải thích: Số 1 ở đầu (sticky bit) đảm bảo rằng chỉ chủ sở hữu của tệp, chủ sở hữu file hoặc người dùng root mới có thể xóa hoặc đổi tên các tệp trong thư mục, cho dù các thành viên khác của nhóm có quyền ghi.
+    - Kết quả:
