--- a/HW04/HW04.md
+++ b/HW04/HW04.md
@@ -49,14 +49,13 @@
         sudo hostnamectl set-hostname mystudent-pc
         ```
     - Giải thích: Lệnh `hostnamectl set-hostname` thay đổi hostname của hệ thống một cách vĩnh viễn.
-    - Kết quả:
 - Confirm the new hostname is applied
     - Dùng lệnh:
         ```bash
         hostnamectl
         ```
     - Giải thích: Lệnh `hostnamectl` hiển thị thông tin chi tiết về hostname hiện tại của hệ thống.
-    - Kết quả:
+- Kết quả:
 
 ## 4. Check Open Ports and Services
 - Use ss -tuln to list listening services
@@ -100,8 +99,8 @@
     - Kết quả:
 - Explain the difference between curl and wget
     - Trả lời:
-        - **curl**: Công cụ truyền dữ liệu với URL, hỗ trợ nhiều giao thức, mặc định hiển thị output ra terminal, linh hoạt cho API testing.
-        - **wget**: Công cụ tải xuống file từ web, mặc định lưu thành file, hỗ trợ tải đệ quy và tiếp tục tải khi bị gián đoạn.
+        - `curl`: Công cụ truyền dữ liệu với URL, hỗ trợ nhiều giao thức, mặc định hiển thị output ra terminal, linh hoạt cho API testing.
+        - `wget`: Công cụ tải xuống file từ web, mặc định lưu thành file, hỗ trợ tải đệ quy và tiếp tục tải khi bị gián đoạn.
 
 ## 7. Use nmcli to View Connections
 - List all available network connections
@@ -145,7 +144,7 @@
         ```bash
         sudo nmtui
         ```
-    - Giải thích: Lệnh `nmtui` mở giao diện text-based interactive để cấu hình mạng dễ dàng hơn.
+    - Giải thích: Lệnh `nmtui` mở giao diện text-based interactive.
     - Kết quả:
 - Take screenshots (or describe the steps) for:
     - Activating/deactivating a connection
@@ -177,7 +176,7 @@
         ```bash
         sudo nmcli connection up "Wired connection 1"
         nmcli connection show --active
-        ping -c 4 google.com
+        ping google.com
         ```
     - Giải thích: Lệnh `nmcli connection up` kích hoạt lại connection, sau đó xác nhận bằng `show --active` và kiểm tra kết nối bằng `ping`.
     - Kết quả:
