--- a/HW04/HW04.md
+++ b/HW04/HW04.md
@@ -9,14 +9,14 @@
         ip addr show
         ```
     - Giải thích: Lệnh `ip addr show` hiển thị tất cả các giao diện mạng và địa chỉ IP được gán cho chúng.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/1.png?raw=true)
 - Identify your system's main IP address and interface name
     - Dùng lệnh:
         ```bash
         ip route show default
         ```
     - Giải thích: Lệnh `ip route show default` hiển thị gateway mặc định và interface chính của hệ thống. 
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/2.png?raw=true)
 
 ## 2. DNS Configuration
 - View the contents of /etc/resolv.conf
@@ -25,7 +25,7 @@
         cat /etc/resolv.conf
         ```
     - Giải thích: Lệnh `cat /etc/resolv.conf` hiển thị nội dung của tệp cấu hình DNS.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/3.png?raw=true)
 - Add Google's DNS (8.8.8.8) temporarily using a text editor
     - Dùng lệnh:
         ```bash
@@ -33,14 +33,14 @@
         # Thêm dòng: nameserver 8.8.8.8
         ```
     - Giải thích: Sử dụng text editor vim để mở file /etc/resolv.conf và thêm dòng nameserver 8.8.8.8 để cấu hình Google DNS
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/4.png?raw=true)
 - Test DNS resolution using dig or nslookup
     - Dùng lệnh:
         ```bash
         nslookup google.com
         ```
     - Giải thích: Lệnh `nslookup google.com` kiểm tra việc phân giải tên miền google.com sử dụng DNS.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/5.png?raw=true)
 
 ## 3. Hostname Setup
 - Set the system hostname to mystudent-pc
@@ -55,7 +55,7 @@
         hostnamectl
         ```
     - Giải thích: Lệnh `hostnamectl` hiển thị thông tin chi tiết về hostname hiện tại của hệ thống.
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/6.png?raw=true)
 
 ## 4. Check Open Ports and Services
 - Use ss -tuln to list listening services
@@ -64,14 +64,14 @@
         sudo ss -tuln
         ```
     - Giải thích: Lệnh `ss -tuln` hiển thị các socket đang lắng nghe với các tùy chọn: `-t` (TCP), `-u` (UDP), `-l` (listening), `-n` (hiển thị địa chỉ số).
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/7.png?raw=true)
 - Find out which service is using port 22
     - Dùng lệnh:
         ```bash
         sudo ss -tlnp | grep :22
         ```
     - Giải thích: Lệnh `ss -tlnp | grep :22` lọc các kết nối TCP đang lắng nghe trên port 22 và hiển thị process đang sử dụng port đó.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/8.png?raw=true)
 
 ## 5. Test Connectivity
 - Use ping to check if google.com is reachable
@@ -80,14 +80,14 @@
         ping google.com
         ```
     - Giải thích: Lệnh `ping google.com` gửi gói tin đến google.com để kiểm tra kết nối mạng.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/9.png?raw=true)
 - Use traceroute to trace the path to google.com
     - Dùng lệnh:
         ```bash
         traceroute google.com
         ```
     - Giải thích: Lệnh `traceroute google.com` hiển thị đường đi của gói tin từ máy tính đến google.com qua các router trung gian.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/10.png?raw=true)
 
 ## 6. Test Web Requests
 - Use curl or wget to download the homepage of example.com
@@ -96,7 +96,7 @@
         curl example.com
         ```
     - Giải thích: Lệnh `curl example.com` tải và hiển thị nội dung HTML của trang web example.com.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/11.png?raw=true)
 - Explain the difference between curl and wget
     - Trả lời:
         - `curl`: Công cụ truyền dữ liệu với URL, hỗ trợ nhiều giao thức, mặc định hiển thị output ra terminal, linh hoạt cho API testing.
@@ -109,31 +109,32 @@
         nmcli connection show
         ```
     - Giải thích: Lệnh `nmcli connection show` hiển thị tất cả các kết nối mạng đã được cấu hình trong NetworkManager.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/12.png?raw=true)
 - Identify which connection is active
     - Dùng lệnh:
         ```bash
         nmcli connection show --active
         ```
     - Giải thích: Lệnh `nmcli connection show --active` chỉ hiển thị các kết nối mạng đang hoạt động.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/13.png?raw=true)
 
 ## 8. Use nmcli to Modify a Connection
 - Change the IP address of a connection (temporarily) using nmcli
     - Dùng lệnh:
         ```bash
-        sudo nmcli connection modify "Wired connection 1" ipv4.addresses 192.168.1.100/24
-        sudo nmcli connection modify "Wired connection 1" ipv4.gateway 192.168.1.1
-        sudo nmcli connection modify "Wired connection 1" ipv4.method manual
-        sudo nmcli connection up "Wired connection 1"
+        sudo nmcli connection modify "OPPO A74" ipv4.addresses 192.168.1.100/24
+        sudo nmcli connection modify "OPPO A74" ipv4.gateway 192.168.1.1
+        sudo nmcli connection modify "OPPO A74" ipv4.method manual
+        sudo nmcli connection show "OPPO A74"
+        <!-- "OPPO A74" là 1 connection trong máy em -->
         ```
-    - Giải thích: Lệnh `nmcli connection modify` thay đổi cấu hình IP thành địa chỉ tĩnh, sau đó `nmcli connection up` kích hoạt lại kết nối để áp dụng thay đổi.
-    - Kết quả:
+    - Giải thích: Lệnh `nmcli connection modify` thay đổi cấu hình IP thành địa chỉ tĩnh, bao gồm địa chỉ IP và gateway. `ipv4.method manual` đặt phương thức IP thành thủ công.
+    - Kết quả: 
 - Restore it to DHCP afterward
     - Dùng lệnh:
         ```bash
-        sudo nmcli connection modify "Wired connection 1" ipv4.method auto
-        sudo nmcli connection up "Wired connection 1"
+        sudo nmcli connection modify "OPPO A74" ipv4.method auto
+        sudo nmcli connection show "OPPO A74"
         ```
     - Giải thích: Đặt `ipv4.method` về `auto` để sử dụng DHCP tự động lấy địa chỉ IP, sau đó kích hoạt lại kết nối.
     - Kết quả:
@@ -153,7 +154,6 @@
             2. Chọn connection muốn activate/deactivate
             3. Nhấn Enter để toggle trạng thái
             4. Chọn "Back" để quay lại
-        - Kết quả:
     - Editing a connection (e.g., change hostname or IP)
         - Các bước:
             1. Chọn "Edit a connection" từ menu chính
@@ -161,22 +161,20 @@
             3. Di chuyển đến mục muốn thay đổi (IPv4 CONFIGURATION)
             4. Thay đổi giá trị mong muốn
             5. Chọn "OK" để lưu thay đổi
-        - Kết quả:
 
 ## 10. Enable/Disable a Network Connection
 - Use nmcli to turn off a connection
     - Dùng lệnh:
         ```bash
-        sudo nmcli connection down "Wired connection 1"
+        sudo nmcli connection down "GreenHouse5-5G"
         ```
     - Giải thích: Lệnh `nmcli connection down` tắt một connection cụ thể, ngắt kết nối mạng.
-    - Kết quả:
 - Re-enable it, and confirm it's working
     - Dùng lệnh:
         ```bash
-        sudo nmcli connection up "Wired connection 1"
+        sudo nmcli connection up "GreenHouse5-5G"
         nmcli connection show --active
         ping google.com
         ```
     - Giải thích: Lệnh `nmcli connection up` kích hoạt lại connection, sau đó xác nhận bằng `show --active` và kiểm tra kết nối bằng `ping`.
-    - Kết quả:
+- Kết quả:
