--- a/HW04/HW04.md
+++ b/HW04/HW04.md
@@ -129,7 +129,7 @@
         <!-- "OPPO A74" là 1 connection trong máy em -->
         ```
     - Giải thích: Lệnh `nmcli connection modify` thay đổi cấu hình IP thành địa chỉ tĩnh, bao gồm địa chỉ IP và gateway. `ipv4.method manual` đặt phương thức IP thành thủ công.
-    - Kết quả: 
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/14.png?raw=true)
 - Restore it to DHCP afterward
     - Dùng lệnh:
         ```bash
@@ -137,7 +137,7 @@
         sudo nmcli connection show "OPPO A74"
         ```
     - Giải thích: Đặt `ipv4.method` về `auto` để sử dụng DHCP tự động lấy địa chỉ IP, sau đó kích hoạt lại kết nối.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/15.png?raw=true)
 
 ## 9. Use nmtui for Configuration
 - Open nmtui
@@ -146,7 +146,7 @@
         sudo nmtui
         ```
     - Giải thích: Lệnh `nmtui` mở giao diện text-based interactive.
-    - Kết quả:
+    - Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/16.png?raw=true)
 - Take screenshots (or describe the steps) for:
     - Activating/deactivating a connection
         - Các bước:
@@ -167,6 +167,7 @@
     - Dùng lệnh:
         ```bash
         sudo nmcli connection down "GreenHouse5-5G"
+        <!-- "GreenHouse5-5G" là connection máy em đang dùng -->
         ```
     - Giải thích: Lệnh `nmcli connection down` tắt một connection cụ thể, ngắt kết nối mạng.
 - Re-enable it, and confirm it's working
@@ -177,4 +178,4 @@
         ping google.com
         ```
     - Giải thích: Lệnh `nmcli connection up` kích hoạt lại connection, sau đó xác nhận bằng `show --active` và kiểm tra kết nối bằng `ping`.
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW04/17.png?raw=true)
