--- a/HW05/HW05.md
+++ b/HW05/HW05.md
@@ -11,7 +11,7 @@
     # Tìm và sửa dòng: PermitRootLogin no
 ```
 - Giải thích: Mở file cấu hình SSH và thay đổi giá trị `PermitRootLogin` thành `no` để ngăn root đăng nhập qua SSH
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/01.png?raw=true)
 
 ### Restart the SSH service
 - Dùng lệnh:
@@ -19,7 +19,8 @@
     sudo systemctl restart ssh
 ```
 - Giải thích: Khởi động lại dịch vụ SSH để áp dụng các thay đổi cấu hình
-- Kết quả:
+
+
 ### Verify service status and test root login
 - Dùng lệnh:
 ```bash
@@ -27,7 +28,7 @@
     ssh root@localhost
 ```
 - Giải thích: Kiểm tra trạng thái dịch vụ SSH và thử đăng nhập root để xác nhận bị chặn.
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/02.png?raw=true)
 
 ## 2. Allow a User to Use SFTP but Deny SSH Shell Access
 
@@ -65,7 +66,7 @@
         AllowTcpForwarding no
         X11Forwarding no
 ```
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/03.png?raw=true)
 
 ### Restart SSH service and test SFTP/SSH access
 - Dùng lệnh
@@ -75,7 +76,7 @@
     ssh sftpuser@localhost
 ```
 - Giải thích: Khởi động lại SSH, kiểm tra SFTP access (thành công) và SSH shell access (bị chặn).
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/05.png?raw=true)
 
 ## 3. Configure SSH Key-Based Authentication
 
@@ -93,7 +94,7 @@
     ssh-keygen -t rsa -b 4096
 ```
 - Giải thích: Tạo cặp SSH key với thuật toán RSA 4096-bit
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/06.png?raw=true)
 
 ### Copy public key to server
 - Dùng lệnh:
@@ -101,7 +102,7 @@
     ssh-copy-id studentuser@localhost
 ```
 - Giải thích: Sao chép public key vào server để cho phép đăng nhập không cần mật khẩu
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/07.png?raw=true)
 
 ### Test key-based login
 - Dùng lệnh:
@@ -109,7 +110,7 @@
     ssh studentuser@localhost
 ```
 - Giải thích: Kiểm tra đăng nhập SSH bằng key, không cần nhập mật khẩu.
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/08.png?raw=true)
 
 ### Disable password-based SSH login
 - Dùng lệnh:
@@ -128,4 +129,4 @@
     sudo systemctl status ssh
 ```
 - Giải thích: Khởi động lại SSH để áp dụng cấu hình và kiểm tra trạng thái dịch vụ.
-- Kết quả:
+- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/09.png?raw=true)
