--- a/HW05/HW05.md
+++ b/HW05/HW05.md
@@ -28,7 +28,9 @@
     ssh root@localhost
 ```
 - Giải thích: Kiểm tra trạng thái dịch vụ SSH và thử đăng nhập root để xác nhận bị chặn.
-- Kết quả: ![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/02.png?raw=true)
+- Kết quả: 
+![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/02.png?raw=true)
+![](https://github.com/C0smic01/Linux-Operating-System-and-Applications/blob/main/HW05/10.png?raw=true)
 
 ## 2. Allow a User to Use SFTP but Deny SSH Shell Access
 
